# brainstem

./: .gitignore  CLAUDE.md  Dockerfile.sim  README.md  SDK_DESIGN.md  pubspec.yaml
.github/workflows/: ci.yml
frequency_watch/: README.md  pubspec.yaml
frequency_watch/example/: real.dart  test_platform_stream.dart  test_platform_timer.dart
han_dog/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
han_dog/example/: readme.md  (+7 more)
han_dog_brain/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
han_dog_message/: README.md
han_dog_message/python/: README.md  pyproject.toml
han_dog_message/python/example/: a.py  cms_client.py  event.py  matrix.py  state.py
han_dog_message/python/google/protobuf/: duration_pb2.py  timestamp_pb2.py
han_dog_message/python/han_dog_message/: __init__.py  cms_pb2.py  cms_pb2.pyi  cms_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  mujoco_pb2.py  mujoco_pb2.pyi  mujoco_pb2_grpc.py
nova_dog_app/: CHANGELOG.md  DESIGN_SYSTEM.md  FINAL_UI_REPORT.md  UI_IMPROVEMENTS.md  pubspec.yaml
onnx_runtime/: README.md  ffigen.yaml  pubspec.yaml
pcan/: README.md  pubspec.yaml
protoframe/: .gitignore  pubspec.yaml
robo_device/: README.md  pubspec.yaml
robo_device_proto/: README.md  pubspec.yaml
scripts/: setup_brainstem_service.py
serial_port/: README.md  pubspec.yaml
sim/: quadruped.urdf  quadruped.xml  verify_gestures.py
sirius/: CHANGELOG.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_SUGGESTIONS.md  PRODUCT_ANALYSIS.md  README.md  pubspec.yaml
skinny_dog_algebra/: README.md  pubspec.yaml
(+249 files in other folders)
